--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podcast</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/741f7f8314.js" crossorigin="anonymous"></script>
+    <title>Podcast Coldpay</title>
 </head>
 <body>
-    <h1>Podcast</h1>
+    <header>
+        <section>
+            <button></button>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+    </header>
+    <main>
+        <section>
+            <h1></h1>
+            <p></p>
+            <button></button>
+        </section>
+        <section>
+            <h2></h2>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+            <iframe src="" frameborder="0"></iframe>
+        </section>
+        <section>
+            <img src="" alt="">
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </section>
+        <section>
+            <h2></h2>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <p><a href=""></a></p>
+            <p><a href=""></a></p>
+            <p><a href=""></a></p>
+            <p><a href=""></a></p>
+        </section>
+        <section>
+            <h2></h2>
+            <button></button>
+        </section>
+    </main>
+    <footer>
+    <p></p>
+    <a href=""><img src="" alt=""></a>
+    <a href=""><img src="" alt=""></a>
+    <a href=""><img src="" alt=""></a>
+    <a href=""><img src="" alt=""></a>
+    <a href=""><img src="" alt=""></a>
+    </footer>
 </body>
 </html>
