--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
 <body>
     <header>
         <section>
-            <button></button>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <img src="" alt="">
+            <div class="respmenu">
+                <input type="checkbox">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-times"></i>
+                <nav>
+                    <ul>
+                        <li><a href="">Escuchalos!</a></li>
+                        <li><a href="">Origenes</a></li>
+                        <li><a href="">Conciertos</a></li>
+                        <li><a href="">Algo mas!</a></li>
+                    </ul>
+                </nav>
+            </div> 
         </section>
     </header>
     <main>
         <section>
-            <h1></h1>
-            <p></p>
+            <h1 class="title-podcast">Podcast Coldplay</h1>
+            <p class="description-podcast">Escucharas lo mejor de Colplay en este podcast, entre ellos entrevistas,
+                ultimos temas, novedades y muchos mas!
+            </p>
             <button></button>
         </section>
         <section>
